--- a/Authentication_Security/Canvas_Flow-v1/package.json
+++ b/Authentication_Security/Canvas_Flow-v1/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.17.1",
     "passport": "^0.7.0",
